--- a/new000.html
+++ b/new000.html
@@ -4,9 +4,26 @@ To change this template use Tools | Templates.
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+    <style>
+    h1{font-size:50px;}
+    li{font-size:35px;}
+    html {background-image:url("http://pinhighapparel.com/golf-apparel/metall5-1850.jpg");}
+    .contents{color:red;}
+    
+    </style>
     <title></title>
 </head>
+   
+    
+    <h1>Table of Contents</h1>
+    <ul>
+        <li><a class=contents href="new time.html">Intro Page</a></li>
+        <li><a class=contents href="new001.html">About Me</a></li>
+        <li><a class=contents href="new002.html">Html/Css</a></li>
+        <li><a class=contents href="new003.html">Hardware</a></li>
+    </ul>
 <body>
 
 </body>
+   
 </html>
