--- a/new time.html
+++ b/new time.html
@@ -7,10 +7,12 @@ To change this template use Tools | Templates.
     <title></title>
 </head>
     <style>
-        h1{font-family: "Monospace";}
+        h1{font-family: "Monospace";color:red;}
     html{background-image: url("http://pinhighapparel.com/golf-apparel/metall5-1850.jpg");}
     #contents{color:red;}
+     #code{height:200px;}   
     </style>
+    <body>
     <h1> Intro Page </h1>
     <a id=contents href="new000.html">table of contents</a>
          <p>Welcome to my website. I am in the Summit computer science class. We have been learning code 
@@ -18,7 +20,7 @@ To change this template use Tools | Templates.
     code.You can find My about me, my Html and Css, and hardware page. I have been working really hard on khan academy learning the new content
     and how to start coding. I want to accomplish a level of proficientcy in coding so that I can teach my mother.
     </p>
-<body>
+        <img id=code src="code"/>
 
 </body>
 </html>
