--- a/new001.html
+++ b/new001.html
@@ -7,10 +7,13 @@ To change this template use Tools | Templates.
     <title></title>
 </head>
     <style>
+        #mother{height:200px;}
+        #my-dogs{height:200px;}
         html{background-image:url("http://pinhighapparel.com/golf-apparel/metall5-1850.jpg" );}
         #contents{color:red;}
-    
+        h1{font-family:monospace;color:red;}
     </style>
+    <body>
     <h1>About Me</h1>
     <a id=contents href="new000.html">table of contents</a>
     <p>I'm Kyle Patrick and I'm in 9th grade. I go to Summit and I went to Central Middle School, White Oaks Elementary, 
@@ -25,9 +28,12 @@ To change this template use Tools | Templates.
         do before I go to sleep. I enjoy walking my dog because it gives me time to think and it lets me bond with my dog.I enjoy
         hanging out with friends because its fun and I learn a lot through our conversations we really bring each other up and make 
         each other better.I enjoy watching soccer because it once again lets me explore my love for soccer. I always watch with friends
-        and/or family. We always bond and have a good time.
+        and/or family. We always bond and have a good time. The pictures below are of my dogs and my parents.
 </p>
-<body>
+        <img id=father src="father"/>
+        <img id=my-dogs src="my-dogs"/>
+        <img id=mother src="mom.jpg" />
+
 
 </body>
 </html>
