--- a/index.html
+++ b/index.html
@@ -5,124 +5,49 @@ To change this template use Tools | Templates.
 <html>
 
 <head>
-    <title>My website</title>
     <style>
-        Border {
+        h1 {
+            font-size:50px;
+        }
+        li {
+            font-size:35px;
+        }
+        .contents {
             color:red;
         }
-        #welcome {
-            color:red;
+        #hyper-venom {
+            height:200px;
         }
-        #computer-science {
-            color:green;
+        #trophy {
+            height:200px;
         }
-        #my-webpage {
-            color:blue;
-        }
-        #hobbies {
-            color:green;
-        }
-        #soccer {
-            color:blue;
-        }
-        #about-me-introduction {
-            color:red;
-        }
-        h1 {
-            background-color:red;
-        }
-        h1 {
-            width:100%;
-        }
-        h2 {
-            background-color:blue;
-        }
-        h2 {
-            color:black;
-        }
-        h3 {
-            background-color:yellow;
-        }
-        h3 {
-            color:white;
-        }
-        h1 {
-            font-size:40px;
-        }
-        h2 {
-            font-size:40px;
-        }
-        h3 {
-            font-size:40px;
-        }
-        h4 {
-            font-size:40px;
-        }
-        h5 {
-            font-size:40px;
-        }
-        h5 {
-            background-color:purple;
+        html {
+            background-image:url("http://pinhighapparel.com/golf-apparel/metall5-1850.jpg");
         }
     </style>
-    <!--navbar -->
-    <ul id="navbar">
-        <li>
-            <a href ""</li>
-                <li </ul>
-
-                    <body>
-                        <h4>Table of Contents</h4>
-                        <h5>Intro Page</h5>
-                        <p>
-                            <span id=welcome>Welcome to my website.</span><span id=computer-science>I am in the Summit computer science class. We have been learning code through Khan Academy. We are taking this class
-            to become better at coding. The purpose of this class in learning how to code.</span><span id=my-webpage>You can find My about me, my Html and Css, and 
-            hardware page.</span>
-
-                        </p>
-                        <h1>About Me</h1>
-                        <p><span id="about-me-introduction">I'm Kyle Patrick and I'm in 9th grade. I go to Summit and I went to Central Middle School, White Oaks Elementary,
-    and Marin day care for preschool.In my life I have always lived in San Carlos in the same house as well. I enjoy playing soccer tennis with my friends at the park
-    I feel that really sums up what I am and who I am.</span>  <span id=soccer>I enjoy soccer and hanging out with friends. I am a sucker for anything that
-    looks really nice in the way its put together or has a really mettalic look. Another thing I really like is soccer boots they really interest me.
-    They look great and they have a lot of functionality.</span><span id=hobbies>In my free time I play fifa with friends, read, walk my dog, hang out with
-    friends, play soccer with them, go into the tunnels with them, watch soccer,and listen to music. The reason I enjoy playing fifa with friends is its very
-    competitive and I'm a competitive person. I also enjoy playing because I love playing soccer.Fifa is a good way to channel that passion. I read because 
-    I find it enjoyable and I learn lots of new things because of it. It also is a great thing to do before I go to sleep. I enjoy walking my dog because it
-    gives me time to think and it lets me bond with my dog.I enjoy hanging out with friends because its fun and I learn a lot through our conversations we really
-    bring each other up and make each other better.I enjoy watching soccer because it once again lets me explore my love for soccer. I always watch with friends
-    and/or family. We always bond and 
-    have a good time.</span>
-
-
-                        </p <link </body>
-                        <h2>HTML/CSS Page</h2>
-                        <p>I learned a lot about Html and CSS. Khan Academy was my main learning medium. Html stands for Hyper Text Mark-up Language. It is used to make websites. Html was created 22 years ago but the latest iteration was october 2014. Its written using tags. CSS stands for cascading style sheets. Its is used embbeded or external. If you want to use it embbeded you need the style tag. It was made 18 years ago. It is written using classes id's and colors. A tag is a command that the computer can read and perform. You write one buy surrounding a command in sideways triangles. To change attributes you need to surround the attribute with :;. 4 commands that I learned are the style tag which allows you use CSS in the same document as the HTML. The next tag is span it allows you add css effects to the area you spanned. Another tag I learned is the br tag which is like pressing enter on google docs. final tag is the h tag which makes headings.
-
-                        </p>
+    <title></title>
+</head>
 
 
 
+<body>
+    <h1>Table of Contents</h1>
+    <ul>
+        <li><a class=contents href="new time.html">Intro Page</a>
+        </li>
+        <li><a class=contents href="new001.html">About Me</a>
+        </li>
+        <li><a class=contents href="new002.html">Html/Css</a>
+        </li>
+        <li><a class=contents href="new003.html">Hardware</a>
+        </li>
+    </ul>
+
+    <img id=trophy src="trophy.jpg" />
+    <img id=hyper-venom src="blueshoe.jpg" />
 
 
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <h3>Hardware</h3>
 
-
-
-
+</body>
 
 </html>
-
-
-
-
-
