--- a/todo.html
+++ b/todo.html
@@ -9,7 +9,7 @@
       html {
     background-image:url("http://www.systhread.net/texts/200511gimp-img/plasma_ab.jpg");
 }
-html{color:red}
+html{color:yellow}
     
   </style>
   	<link rel="stylesheet" type="text/css" href="todolist.css">
@@ -25,7 +25,7 @@ html{color:red}
         <input type="text" id="field" />
       
         <input type="submit" />
-        <input type="reset" value="Reset"><br>
+        <input type="reset" value="Reset">
           <button id="deleteAll">Delete All</button>
   
       </div>
